dodan edit servica za tenante i bug fix za mark as unavailable